# autonomous-agent-framwork

./: .gitignore  CONTRACT.md  Makefile  README.md  compose.yml
deploy/: Dockerfile  README.md
dev-agent/: .env.example  .gitignore  Dockerfile  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  QUICKSTART.md  README.md  pyproject.toml  start.sh  validate_system.py
dev-agent/deployment/docker/: init.sql
dev-agent/docs/architecture/: LANGGRAPH_GUIDE.md  SYSTEM_DESIGN.md
dev-agent/src/agent/: __init__.py  __main__.py
dev-agent/src/agent/a2a/: __init__.py  agent_card.py  client.py  server.py  task.py
dev-agent/src/agent/agents/: __init__.py  architecture_agent.py  base.py  deployment_agent.py  implementation_agent.py  operations_agent.py  requirements_agent.py  testing_agent.py
dev-agent/src/agent/agents/mcp/: __init__.py  architecture.py  base.py  cicd.py  coding.py  deployment.py  design.py  monitoring.py  requirements.py  testing.py
dev-agent/src/agent/api/: a2a_app.py  rest.py  schemas.py  websocket.py
dev-agent/src/agent/cli/: __init__.py  main.py  rich_cli.py
dev-agent/src/agent/config/: __init__.py  settings.py
dev-agent/src/agent/core/: __init__.py  engine.py  orchestrator.py
dev-agent/src/agent/langgraph/: __init__.py  checkpointer.py  graph.py  state.py  supervisor.py
dev-agent/src/agent/llm/: __init__.py  base.py  openai_client.py
dev-agent/src/agent/mcp/: __init__.py  client.py  sandbox_server.py  servers.py  tools.py
dev-agent/src/agent/memory/: __init__.py  embeddings.py  episodic.py  procedural.py  retrieval.py  vector_store.py  working.py
dev-agent/src/agent/observability/: audit.py  logging.py  metrics.py  resources.py  tracing.py
dev-agent/src/agent/security/: authentication.py  policies.py  rate_limiting.py  secrets.py  validation.py
dev-agent/src/agent/session/: checkpoint.py  manager.py
dev-agent/src/agent/tools/: __init__.py  base.py  calculator.py
dev-agent/src/agent/tools/filesystem/: __init__.py  read.py  search.py  write.py
dev-agent/src/agent/tools/git/: __init__.py  operations.py
dev-agent/src/agent/tools/shell/: __init__.py  executor.py
dev-agent/tests/integration/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
orchestrator/: README.md  agents-cli-manifest.yaml  e2e_test.py  e2e_test.sh  pyproject.toml
orchestrator/.github/workflows/: staging.yaml
orchestrator/app/: agent.py  fast_api_app.py
orchestrator/app/app_utils/: telemetry.py  typing.py
orchestrator/deployment/terraform/cicd/: variables.tf
orchestrator/deployment/terraform/cicd/vars/: env.tfvars
orchestrator/deployment/terraform/single-project/: variables.tf
orchestrator/deployment/terraform/single-project/vars/: env.tfvars
